linphone-3.4.0 -- XXXXX
	* implement multiple calls feature: 
		- call hold (with possibility to play a music file)
		- call resume 
		- acceptance of 2nd call while putting the others on hold
		- creation of another outgoing call while already in call
		- blind call transfer
		- attended call transfer
	* improve bandwidth management (one b=AS line is used for audio+video)
	* improvements in the echo limiter
	* stun support bugfixes
	* possibility to use two video windows, one for local preview, one for remote video (linphonec only)
	* optimize by not re-creating streams when SDP is unchanged during a reinvite
	* support for sending early media
	* doxygen doc and javadoc improvements
	* based on mediastreamer-2.7.0, please refer to mediastreamer NEWS for changes.

linphone-3.3.2 -- July 1st, 2010
	* fix crash when setting firewall address in gtk interface
	* fix crash while closing video window on windows
	* fix un-sent BYE message in some rare cases.
	Requires:
		mediastreamer2-2.6.0
		ortp-0.16.3

linphone-3.3.1 -- June 3, 2010
	* fix bugs when carrying non ascii displaynames in SIP messages
	* fix crash when codecs are incompatible
	* fix bug with streams not restarted in case of reinvites
	Requires:
		mediastreamer2-2.5.0
		ortp-0.16.3

linphone-3.3.0 -- May 19, 2010
	* liblinphone is ported to iphoneOS and Google Android
	* Internal refactoring of liblinphone (code factorisation, encapsulation
		of signaling)
	* enhancements made to presence support (SIP/SIMPLE)
	* new icons
	* new tabbed ui
	* be nat friendly using OPTIONS request and using received,rport from
		responses.
	* use stun guessed ports even if symmetric is detected (works with freeboxes)
	* improve bitrate usage of speex codec
	* allow speex to run with vbr (variable bit rate) mode
	* add speex/32000 (ultra wide band speex codec)
	* answer empty SIP INFO requests
	* reverse order of call logs
	* optimize video display
	* manual or automatic network connectivity management (so that REGISTERs